[package]
name = "rsomics-common"
version = "0.1.1"
description = "Shared primitives for every rsomics-* crate (errors, CLI scaffold, runner, progress, exit codes)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
default = []
test-support = []

[dependencies]
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
rayon.workspace = true

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
