[package]
name = "rsomics-common"
version = "0.3.0"
description = "Shared primitives for every rsomics-* crate (errors, CLI scaffold, runner, progress, exit codes)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[features]
# rayon is default-on so existing consumers (rsomics-fastp, rsomics-bam) keep
# working unchanged. Single-threaded FFI-wrapper tools that don't touch the
# global pool can opt out with `default-features = false` to skip rayon's
# transitive deps and binary-size impact.
default = ["rayon"]
rayon = ["dep:rayon"]
# test-support: fixture-path macro, tool_on_path predicate, run_tool wrapper.
# tier2 implies test-support and pulls in toml + sha2 + ureq for the on-demand
# fixture download/verify path (used only by integration tests + benches).
test-support = []
tier2 = ["test-support", "dep:toml", "dep:sha2", "dep:ureq"]

[dependencies]
thiserror.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
flate2.workspace = true
rayon = { workspace = true, optional = true }
toml = { version = "0.9", optional = true }
sha2 = { version = "0.10", optional = true }
ureq = { version = "3", default-features = false, features = ["rustls"], optional = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
